--- a/projects/vue-lerna-01/package.json
+++ b/projects/vue-lerna-01/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "vue-lerna-01",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "first:serve": "vue-cli-service serve",
-    "first:build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.1"
-  },
-  "devDependencies": {
-    "typescript": "~3.8.3"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+	"name": "vue-lerna-01",
+	"version": "1.0.0",
+	"private": true,
+	"dependencies": {
+		"core-js": "^3.6.4",
+		"vue": "^2.6.11",
+		"vue-class-component": "^7.2.3",
+		"vue-property-decorator": "^8.4.1"
+	},
+	"devDependencies": {
+		"@vue/cli-plugin-babel": "^4.3.0",
+		"@vue/cli-plugin-typescript": "^4.3.0",
+		"@vue/cli-service": "^4.3.0",
+		"node-sass": "^4.12.0",
+		"sass-loader": "^8.0.2",
+		"typescript": "~3.8.3",
+		"vue-template-compiler": "^2.6.11"
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not dead"
+	]
 }
